--- a/_posts/python/2020-05-09-python99.md
+++ b/_posts/python/2020-05-09-python99.md
@@ -6,6 +6,10 @@ description: 使用 Python 编写99乘法表
 keywords: python
 ---
 
+##### 使用 Python 编写99乘法表
+
+源代码上:  
+
 ```
 # python 九九乘法表
 # 创建外层循环 控制高度
@@ -23,5 +27,5 @@ while i < 9:
     # 在每行结尾处 进行 换行
     print()
 ```
-运行效果图:
+运行效果图:  
 ![](/images/posts/python/python99.png)
