--- a/_posts/python/2020-05-09-python99.md
+++ b/_posts/python/2020-05-09-python99.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Python 编写99乘法表
-categories: [python]
+categories: [Python]
 description: 使用 Python 编写99乘法表
 keywords: python
 ---
