--- a/pages/404.md
+++ b/pages/404.md
@@ -13,21 +13,19 @@ permalink: /404.html
 
 原因：博客搬迁造成的旧链接失效。
 
-例子：《中文文案排版指北（简体中文版）》的链接是
+例子：
 
 ```
-http://mzlog.com/wiki/chinese-copywriting-guidelines/
+http://hai1995.github.io/
 ```
 
 请修改成
 
 ```
-https://mazhuang.org/wiki/chinese-copywriting-guidelines/
+http://blog.dbixb.top/
 ```
 
-改动要点：将域名 `mzlog.com` 改成 `mazhuang.org`。
-
-**备用办法：** 在「[分类](/categories/)」中找。
+改动要点：将域名 `hai1995.github.io` 改成 `blog.dbixb.to`。
 
 ## 二、维度攻击
 
